--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <img src="Gallery/LC Header.png" id="header" />
+    <img src="https://imgur.com/6LA5qkc.png" id="header" />
 
     <div id="aboutus">
       <h1>History</h1>
@@ -116,9 +116,9 @@
     </div>
 
     <div class="founders">
-      <img id="marco" src="Gallery/Marco.png" />
-      <img id="bureaqer" src="Gallery/Bur.png" />
-      <img id="jasmine" src="Gallery/Jas.png" />
+      <img id="marco" src="https://imgur.com/K49aFuz.png" />
+      <img id="bureaqer" src="https://imgur.com/KchIgLS.png" />
+      <img id="jasmine" src="https://imgur.com/sMqSlhW.png" />
       <div id="ma-name">
         <p class="retired-text">Marco Lloyd<br />Retired Chairman</p>
       </div>
@@ -133,3 +133,4 @@
 
     <footer id="footer"><p>Lloyd Corporation - Copyright 2021 ©</p></footer>
   </body>
+</html>
