--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </li>
       </div>
       <div>
-        <a class="" href="file:///E:/Others/CSS%20website/test.html"
+        <a class="" href="prices.html"
           >Price List</a
         >
       </div>
