--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./Study-3.css" />
-    <script src="Study-3.js"></script>
+    <link
+      rel="shortcut icon"
+      href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
+    />
     <script
       src="https://kit.fontawesome.com/a5a841ddfe.js"
       crossorigin="anonymous"
     ></script>
-    <title>Study 3</title>
+    <title>Lloyd Corporation</title>
   </head>
   <body>
     <div id="test">
