--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div id="navbar">
-      <div><a class="current" class="nav" href="#">Home</a></div>
+      <div><a class="current" class="nav" href="https://lloyd-corporation.com/">Home</a></div>
       <div>
         <a
           class="forum"
