--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </li>
       </div>
       <div>
-        <a class="" href="prices.html"
+        <a class="" href="pricelist"
           >Price List</a
         >
       </div>
