--- a/pricelist.html
+++ b/pricelist.html
@@ -17,6 +17,11 @@
       rel="shortcut icon"
       href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
     />
+    <script src="prices-1.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a5a841ddfe.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Lloyd C | Price List</title>
   </head>
   <body>
