--- a/pricelist.html
+++ b/pricelist.html
@@ -27,7 +27,7 @@
   <body>
     <section>
       <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        <a class="closebtn" style="cursor: pointer" onclick="closeNav()"
           >&times;</a
         >
         <a href="https://lloyd-corporation.com/">Home</a>
