--- a/pricelist.html
+++ b/pricelist.html
@@ -46,6 +46,9 @@
 
     <div class="container">
       <div class="box">
+        <span id="openbtn" style="cursor: pointer" onclick="openNav()"
+          >&#9776;</span
+        >
         <p id="title">
           Price list of STOCK vehicles<span
             ><br />(Out of stock vehicles are not included)</span
@@ -228,11 +231,5 @@
         </div>
       </div>
     </div>
-    <span
-      id="openbtn"
-      style="font-size: 2vw; cursor: pointer"
-      onclick="openNav()"
-      >&#9776;</span
-    >
   </body>
 </html>
