--- a/pricelist.html
+++ b/pricelist.html
@@ -37,7 +37,7 @@
           href="https://discord.com/invite/ErYZ9Uc6?utm_source=Discord%20Widget&utm_medium=Connect"
           >Discord</a
         >
-        <a href="#">Employment</a>
+        <a href="https://lloyd-corporation.com/employment">Employment</a>
         <a class="closebtn" style="cursor: pointer" onclick="closeNav()"
           >&times;</a
         >
