--- a/employment.html
+++ b/employment.html
@@ -24,6 +24,7 @@
   <body>
     <section>
       <div class="container">
+        <a href="https://lloyd-corporation.com" class="menu">Menu</a>
         <a href="#" class="sales">Sales Official</a>
         <a href="#" class="estate">Real Estate Agent</a>
         <a href="#" class="designer">Designer</a>
