--- a/employment.html
+++ b/employment.html
@@ -22,6 +22,7 @@
     <title>Lloyd C | Employment</title>
   </head>
   <body>
+    <img src="Gallery/background.png" class="bg" />
     <section>
       <div class="container">
         <a href="https://lloyd-corporation.com" class="menu">Menu</a>
