--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div>
         <a
           class="forum"
-          href="https://forum.valrisegaming.com/index.php?/topic/15756-official-lloyd-corporation-lc/"
-          >Forum</a
+          href="https://forum.valrisegaming.com/index.php?/topic/15756-official-lloyd-corporation-lc/" 
+          target="_blank">Forum</a
         >
       </div>
       <div><a class="employment" href="https://lloyd-corporation.com/employment">Employment</a></div>
@@ -71,7 +71,7 @@
       <div class="widget">
         <li>
           <a
-            href="https://discord.com/invite/ErYZ9Uc6?utm_source=Discord%20Widget&utm_medium=Connect"
+            href="https://discord.com/invite/ErYZ9Uc6?utm_source=Discord%20Widget&utm_medium=Connect" target="_blank"
             >Discord</a
           >
           <div class="ddropdown">
