--- a/employment.html
+++ b/employment.html
@@ -26,7 +26,7 @@
     <section>
       <div class="container">
         <a href="https://lloyd-corporation.com" class="menu">Menu</a>
-        <a href="#" class="sales">Sales Official</a>
+        <a href="https://lloyd-corporation.com/jobs/sales" class="sales">Sales Official</a>
         <a href="#" class="estate">Real Estate Agent</a>
         <a href="#" class="designer">Designer</a>
         <a href="#" class="security">Security Staff</a>
