--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -60,10 +60,7 @@
     <a href="https://lloyd-corporation.com/employment" class="back">
       <p>Menu</p>
     </a>
-    <a
-      href="https://discord.com/invite/ErYZ9Uc6?utm_source=Discord%20Widget&utm_medium=Connect"
-      class="apply"
-    >
+    <a href="https://discord.com/invite/FE7NzyN" class="apply">
       <p>Apply Now</p>
     </a>
     <section>
