--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="widget">
         <li>
           <a
-            href="https://discord.com/invite/ErYZ9Uc6?utm_source=Discord%20Widget&utm_medium=Connect" target="_blank"
+            href="https://discord.com/invite/FE7NzyN" target="_blank"
             >Discord</a
           >
           <div class="ddropdown">
