--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -1,70 +1,327 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="sales.css" />
-    <link
-      rel="shortcut icon"
-      href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
-    />
-    <script src="sales.js"></script>
-    <script
-      src="https://kit.fontawesome.com/a5a841ddfe.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>Lloyd C | Sales Official</title>
-  </head>
-  <body>
-    <img id="header" src="../Gallery/hotring.png" class="hotring" />
-    <section>
-      <a href="#bg" class="footer">
-        <p class="text-scroll">Continue</p>
-        <p class="scroll"><i class="fas fa-arrow-down"></i></p>
-      </a>
-      <div class="desc">
-        <h1>Position's Worksheet</h1>
-        <p>
-          It requires the employee to sell stock vehicles from the State Owned
-          Dealerships, out of stock vehicles from our showroom, but also to
-          purchase rare, exquisite vehicles from our customers.
-        </p>
-        <p id="gta">
-          This job vacancy is offered by:<br /><span
-            >Grand Theft Automotive</span
-          >
-        </p>
-      </div>
-    </section>
-    <div class="second-desc">
-      <h1>Job Requirements:</h1>
-      <p>
-        1. Not being involved in a crime labeled as misdemeanor or felony, in
-        the previous fourteen (14) days;<br /><br />2. Have the time and
-        patience to learn from those who are more experienced;<br /><br />3.
-        Have the ability to be respectful even towards angry or frustrated
-        customers;<br /><br />4. Able to communicate in an assertive manner;<br /><br />5.
-        Good knowledge of English language.
-      </p>
-    </div>
-    <a href="#header" class="header">
-      <p class="scroll-up"><i class="fas fa-arrow-up"></i></p>
-    </a>
-    <a href="https://lloyd-corporation.com/employment" class="back">
-      <p>Menu</p>
-    </a>
-    <a href="https://discord.com/invite/FE7NzyN" class="apply">
-      <p>Apply Now</p>
-    </a>
-    <section>
-      <img id="bg" src="../Gallery/jester.png" />
-    </section>
-  </body>
-</html>
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #333333;
+  overflow-x: hidden;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.hotring {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.scroll {
+  background-color: white;
+  height: 3vw;
+  width: 3vw;
+  position: absolute;
+  border-radius: 50%;
+  text-decoration: none;
+  bottom: 15%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  text-align: center;
+  line-height: 3.2vw;
+  font-size: 2vw;
+  color: #333333;
+}
+.text-scroll {
+  color: white;
+  position: absolute;
+  text-decoration: none;
+  bottom: -10%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  text-align: center;
+  font-size: 1.5vw;
+  font-family: "Montserrat", sans-serif;
+}
+.footer:hover .scroll {
+  background-color: #333333;
+  color: white;
+  transition: background-color 0.3s ease-out;
+  transition: color 0.3s ease-out;
+}
+.footer:hover .text-scroll {
+  color: #333333;
+  transition: background-color 0.3s ease-out;
+}
+
+.footer {
+  background-color: #333333;
+  height: 7vw;
+  width: 20%;
+  right: 2.5%;
+  position: absolute;
+  bottom: 5%;
+  border: 2px solid white;
+  z-index: 2;
+}
+.footer:hover {
+  background-color: #e6e6e6;
+  transition: background-color 0.3s ease-out;
+  border-color: #000000;
+}
+
+.desc {
+  background-color: #333333;
+  height: 200vh;
+  width: 25%;
+  right: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.desc h1 {
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  font-size: 1.5vw;
+  margin-top: 5vw;
+  margin-bottom: 3vw;
+  text-align: center;
+  text-decoration: underline;
+}
+.desc p {
+  font-family: "Montserrat", sans-serif;
+  margin: 2vw;
+  color: white;
+  font-size: 1.2vw;
+  line-height: 1.7vw;
+  text-align: justify;
+}
+#gta {
+  text-align: center;
+}
+#gta span {
+  color: rgb(255, 87, 87);
+  font-weight: 600;
+  font-size: 1.5vw;
+}
+
+#bg {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  margin-top: 100vh;
+  object-fit: cover;
+  transform: translateX(-16vw);
+}
+
+.second-desc {
+  width: 25%;
+  right: 0;
+  top: 100vh;
+  position: absolute;
+  z-index: 1;
+}
+.second-desc h1 {
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  font-size: 1.5vw;
+  margin-top: 5vw;
+  margin-bottom: 3vw;
+  text-align: center;
+  text-decoration: underline;
+}
+.second-desc p {
+  font-family: "Montserrat", sans-serif;
+  margin: 2vw;
+  color: white;
+  font-size: 1.2vw;
+  line-height: 1.6vw;
+}
+
+.header {
+  background-color: #33333300;
+  height: 3vw;
+  width: 3vw;
+  border-radius: 50%;
+  right: 2.5%;
+  position: absolute;
+  top: 190vh;
+  z-index: 2;
+}
+.scroll-up:hover {
+  background-color: #747474;
+  transition: background-color 0.1s ease-out;
+}
+.scroll-up {
+  background-color: white;
+  position: absolute;
+  height: 3vw;
+  width: 3vw;
+  bottom: -2vw;
+  border-radius: 50%;
+  text-decoration: none;
+  text-align: center;
+  line-height: 3.2vw;
+  font-size: 2vw;
+  color: #333333;
+}
+
+.back {
+  background-color: #333333;
+  height: 3vw;
+  width: 15%;
+  right: 7.5%;
+  position: absolute;
+  top: 189.8vh;
+  border: 2px solid white;
+  z-index: 2;
+}
+.back:hover {
+  background-color: #e6e6e6;
+  transition: background-color 0.3s ease-out;
+  border-color: #000000;
+}
+.back p {
+  color: white;
+  position: absolute;
+  text-decoration: none;
+  bottom: -45%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  text-align: center;
+  font-size: 1.8vw;
+  font-family: "Montserrat", sans-serif;
+}
+.back:hover p {
+  color: #333333;
+  transition: background-color 0.3s ease-out;
+}
+
+.apply {
+  background-color: #333333;
+  height: 3vw;
+  width: 20%;
+  right: 2.5%;
+  position: absolute;
+  top: 180vh;
+  border: 2px solid white;
+  z-index: 2;
+}
+.apply:hover {
+  background-color: #e6e6e6;
+  transition: background-color 0.3s ease-out;
+  border-color: #000000;
+}
+.apply p {
+  color: white;
+  position: absolute;
+  text-decoration: none;
+  bottom: -45%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  text-align: center;
+  font-size: 1.8vw;
+  font-family: "Montserrat", sans-serif;
+}
+.apply:hover p {
+  color: #333333;
+  transition: background-color 0.3s ease-out;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(66, 66, 66);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(255, 87, 87);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(255, 65, 97);
+}
+
+@media only screen and (max-width: 1000px) {
+  .footer {
+    width: 40%;
+  }
+  .desc {
+    width: 45%;
+  }
+  .desc h1 {
+    font-size: 3vw;
+    margin-top: 6vw;
+    margin-bottom: 5vw;
+  }
+  .desc p {
+    font-size: 2.5vw;
+    line-height: 4vw;
+    margin-bottom: 5vw;
+  }
+  #gta span {
+    font-size: 3vw;
+  }
+  .scroll {
+    height: 6vw;
+    width: 6vw;
+    bottom: 0%;
+    right: 0%;
+    transform: translate(200%, 75%);
+    line-height: 6.8vw;
+    font-size: 5vw;
+  }
+  .text-scroll {
+    bottom: -60%;
+    left: 0%;
+    transform: translate(20%, 0);
+    text-align: center;
+    font-size: 5vw;
+    font-family: "Montserrat", sans-serif;
+  }
+  .second-desc {
+    width: 45%;
+  }
+  .second-desc h1 {
+    font-size: 3vw;
+    margin-top: 6vw;
+    margin-bottom: 5vw;
+  }
+  .second-desc p {
+    font-size: 2.5vw;
+    line-height: 3.7vw;
+  }
+
+  .back {
+    height: 6vw;
+    width: 30%;
+    right: 12.5%;
+    top: 189.8vh;
+  }
+  .back p {
+    bottom: -55%;
+    font-size: 4vw;
+  }
+  .apply {
+    height: 6vw;
+    width: 40%;
+  }
+  .apply p {
+    bottom: -45%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 3.6vw;
+  }
+
+  .scroll-up {
+    height: 6vw;
+    width: 6vw;
+    right: 1vw;
+    bottom: -8vw;
+    line-height: 6.5vw;
+    font-size: 5vw;
+  }
+}
