--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -60,7 +60,7 @@
     <a href="https://lloyd-corporation.com/employment" class="back">
       <p>Menu</p>
     </a>
-    <a href="https://discord.com/invite/FE7NzyN" class="apply">
+    <a href="https://discord.com/invite/FE7NzyN" target="_blank" class="apply">
       <p>Apply Now</p>
     </a>
     <section>
