--- a/pricelist.html
+++ b/pricelist.html
@@ -29,12 +29,12 @@
       <div id="mySidenav" class="sidenav">
         <a href="https://lloyd-corporation.com/">Home</a>
         <a
-          href="https://forum.valrisegaming.com/index.php?/topic/15756-official-lloyd-corporation-lc/"
+          href="https://forum.valrisegaming.com/index.php?/topic/15756-official-lloyd-corporation-lc/" target="_blank" 
           id="vehicle"
           >Forum</a
         >
         <a
-          href="https://discord.com/invite/ErYZ9Uc6?utm_source=Discord%20Widget&utm_medium=Connect"
+          href="https://discord.com/invite/FE7NzyN" target="_blank" 
           >Discord</a
         >
         <a href="https://lloyd-corporation.com/employment">Employment</a>
