--- a/employment.html
+++ b/employment.html
@@ -26,10 +26,22 @@
     <section>
       <div class="container">
         <a href="https://lloyd-corporation.com" class="menu">Menu</a>
-        <a href="https://lloyd-corporation.com/jobs/sales" class="sales">Sales Official</a>
-        <a href="https://lloyd-corporation.com/jobs/estate" class="estate">Real Estate Agent</a>
-        <a href="https://lloyd-corporation.com/jobs/designer" class="designer">Designer</a>
-        <a href="#" class="security">Security Staff</a>
+        <a href="https://lloyd-corporation.com/jobs/sales" class="sales"
+          >Sales Official</a
+        >
+        <a href="https://lloyd-corporation.com/jobs/estate" class="estate"
+          >Real Estate Agent</a
+        >
+        <a href="https://lloyd-corporation.com/jobs/designer" class="designer"
+          >Designer</a
+        >
+        <div
+          id="box"
+          onmouseout="changeback('Security Staff')"
+          onmouseover="changeText('Recruitment - CLOSED')"
+        >
+          <a href="#" id="text-display" class="security">Security Staff</a>
+        </div>
       </div>
     </section>
   </body>
