--- a/employment.html
+++ b/employment.html
@@ -40,7 +40,7 @@
           onmouseout="changeback('Security Staff')"
           onmouseover="changeText('Recruitment - CLOSED')"
         >
-          <a href="#" id="text-display" class="security">Security Staff</a>
+          <a id="text-display" class="security">Security Staff</a>
         </div>
       </div>
     </section>
