--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           target="_blank">Forum</a
         >
       </div>
-      <div><a class="employment" href="https://lloyd-corporation.com/employment">Career<br />Opportunities</a></div>
+      <div><a href="https://lloyd-corporation.com/employment"><p class="employment">Career<br />Opportunities</p></a></div>
       <div class="company">
         <li>
           <a
