--- a/employment.html
+++ b/employment.html
@@ -25,7 +25,7 @@
     <img src="Gallery/background.png" class="bg" />
     <section>
       <div class="container">
-        <a href="https://lloyd-corporation.com" class="menu">Menu</a>
+        <a href="https://lloyd-corporation.com" class="menu">Home</a>
         <a href="https://lloyd-corporation.com/jobs/sales" class="sales"
           >Sales Official</a
         >
