--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -64,7 +64,7 @@
       <p>Apply Now</p>
     </a>
     <section>
-      <img id="bg" class="jester" src="../Gallery/banshee.webp" />
+      <img id="bg" class="jester" src="../Gallery/banshee.png" />
     </section>
   </body>
 </html>
