--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -23,7 +23,7 @@
     <title>Lloyd C | Sales Official</title>
   </head>
   <body>
-    <img id="header" src="../Gallery/banshee.png" class="hotring" />
+    <img id="header" src="../Gallery/hotring.png" class="hotring" />
     <section>
       <a href="#bg" class="footer">
         <p class="text-scroll">Continue</p>
@@ -64,7 +64,7 @@
       <p>Apply Now</p>
     </a>
     <section>
-      <img id="bg" class="jester" src="../Gallery/banshee.webp" />
+      <img id="bg" class="jester" src="../Gallery/jester.png" />
     </section>
   </body>
 </html>
