--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
       src="https://kit.fontawesome.com/a5a841ddfe.js"
       crossorigin="anonymous"
     ></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="study-3.js"></script>
     <title>Lloyd Corporation</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+    </div>
+
     <div id="test">
       <img
         tabindex="0"
@@ -33,15 +39,24 @@
     </div>
 
     <div id="navbar">
-      <div><a class="current" class="nav" href="https://lloyd-corporation.com/">Home</a></div>
+      <div>
+        <a class="current" class="nav" href="https://lloyd-corporation.com/"
+          >Home</a
+        >
+      </div>
       <div>
         <a
           class="forum"
-          href="https://forum.valrisegaming.com/index.php?/topic/15756-official-lloyd-corporation-lc/" 
-          target="_blank">Forum</a
+          href="https://forum.valrisegaming.com/index.php?/topic/15756-official-lloyd-corporation-lc/"
+          target="_blank"
+          >Forum</a
         >
       </div>
-      <div><a href="https://lloyd-corporation.com/employment"><p class="employment">Career<br />Opportunities</p></a></div>
+      <div>
+        <a href="https://lloyd-corporation.com/employment"
+          ><p class="employment">Career<br />Opportunities</p></a
+        >
+      </div>
       <div class="company">
         <li>
           <a
@@ -64,14 +79,11 @@
         </li>
       </div>
       <div>
-        <a class="" href="pricelist"
-          >Price List</a
-        >
+        <a class="" href="pricelist">Price List</a>
       </div>
       <div class="widget">
         <li>
-          <a
-            href="https://discord.com/invite/FE7NzyN" target="_blank"
+          <a href="https://discord.com/invite/FE7NzyN" target="_blank"
             >Discord</a
           >
           <div class="ddropdown">
