--- a/employment.html
+++ b/employment.html
@@ -14,6 +14,7 @@
       rel="shortcut icon"
       href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="employment.js"></script>
     <script
       src="https://kit.fontawesome.com/a5a841ddfe.js"
@@ -22,6 +23,9 @@
     <title>Lloyd C | Employment</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+    </div>
     <img src="Gallery/background.png" class="bg" />
     <section>
       <div class="container">
