--- a/pricelist.html
+++ b/pricelist.html
@@ -17,6 +17,7 @@
       rel="shortcut icon"
       href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="prices-1.js"></script>
     <script
       src="https://kit.fontawesome.com/a5a841ddfe.js"
@@ -25,6 +26,9 @@
     <title>Lloyd C | Price List</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+    </div>
     <section>
       <div id="mySidenav" class="sidenav">
         <a href="https://lloyd-corporation.com/">Home</a>
