--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -23,6 +23,9 @@
     <title>Lloyd C | Sales Official</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+    </div>
     <img id="header" src="../Gallery/hotring.png" class="hotring" />
     <section>
       <a href="#bg" class="footer">
