--- a/Jobs/estate.html
+++ b/Jobs/estate.html
@@ -14,6 +14,7 @@
       rel="shortcut icon"
       href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="sales.js"></script>
     <script
       src="https://kit.fontawesome.com/a5a841ddfe.js"
@@ -23,6 +24,9 @@
     <title>Lloyd C | Real Estate Agent</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+    </div>
     <img id="header" src="../Gallery/house.png" class="hotring" />
     <section>
       <a href="#bg" class="footer">
