--- a/Jobs/designer.html
+++ b/Jobs/designer.html
@@ -23,6 +23,9 @@
     <title>Lloyd C | Designer</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+    </div>
     <img id="header" src="../Gallery/interior.png" class="hotring" />
     <section>
       <a href="#bg" class="footer">
