--- a/Jobs/estate.html
+++ b/Jobs/estate.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="loader-wrapper">
-      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+      <img src="../Gallery/GIF Logo CUT.gif" class="loader"></img>
     </div>
     <img id="header" src="../Gallery/house.png" class="hotring" />
     <section>
