--- a/Jobs/designer.html
+++ b/Jobs/designer.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="loader-wrapper">
-      <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
+      <img src="../Gallery/GIF Logo CUT.gif" class="loader"></img>
     </div>
     <img id="header" src="../Gallery/interior.png" class="hotring" />
     <section>
