--- a/Gambino/index.html
+++ b/Gambino/index.html
@@ -27,28 +27,6 @@
       <p>The Gambino Family</p>
       <p>La Cosa Nostra</p>
     </div>
-    <div id="longpage">
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/originals/f5/25/6f/f5256f22b9dea5d4eb80c41f91f87793.jpg"
-      />
-    </div>
+    <div id="longpage"></div>
   </body>
 </html>
