--- a/Gambino/index.html
+++ b/Gambino/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pirata+One&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" href="#" />
     <script
-      src="https://kit.fontawesome.com/a5a841ddfe.js"
+      src="http://kit.fontawesome.com/a5a841ddfe.js"
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -22,11 +22,44 @@
     <div class="loader-wrapper">
       <p class="loader"><i class="fab fa-redhat"></i></p>
     </div>
-    <img id="backgroundHQ" src="Gallery/HQ.png" />
+    <img id="backgroundHQ" src="Gallery/HQ_BW.png" />
     <div id="bgText">
-      <p>The Gambino Family</p>
+      <p id="tgf">The Gambino Family</p>
       <p>La Cosa Nostra</p>
     </div>
-    <div id="longpage"></div>
+    <div id="longpage">
+      <div id="menu">
+        <button id="button">MENU</button>
+        <div class="progress" id="forum"><p><div class="ghost" id="fforum"><p></p></div></p></div>
+        <div class="progress" id="history"><p><div class="ghost" id="fhistory"><p></p></div></p></div>
+        <div class="progress" id="media"><p><div class="ghost" id="fmedia"><p></p></div></p></div>
+        <div class="progress" id="hierachy"><p><div class="ghost" id="fhierarchy"><p></p></div></p></div>
+        <div class="progress" id="discord"><p><div class="ghost" id="fdiscord"><p></p></div></p></div>
+        <div class="progress" id="diamond1"><p><div class="ghost" id="fdiamond1"><p></p></div></p></div>
+        <div class="progress" id="diamond2"><p><div class="ghost" id="fdiamond2"><p></p></div></p></div>
+        <div class="progress" id="diamond3"><p><div class="ghost" id="fdiamond3"><p></p></div></p></div>
+        <div class="progress" id="diamond4"><p><div class="ghost" id="fdiamond4"><p></p></div></p></div>
+        <div class="progress" id="diamond5"><p><div class="ghost" id="fdiamond5"><p></p></div></p></div>
+
+      </div>
+    </div>
+
+	<script>
+		$( "#button" ).click(function() {
+			$( ".ghost" ).animate({ left: 0, opacity: 1, }, 1000, function() {
+				var x = document.getElementsByClassName('progress');
+				Array.from(x).forEach(function(x) {
+					x.style.overflow = "visible";
+				});
+			});	
+		});	
+		
+		$("#button").click(function() {
+			$( ".ghost" ).animate({ boxShadow: '0 0 1em rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255)' }, 1000, function() {
+			});
+			
+		})
+		
+	</script>
   </body>
 </html>
