--- a/Gambino/index.html
+++ b/Gambino/index.html
@@ -40,26 +40,23 @@
         <div class="progress" id="diamond3"><p><div class="ghost" id="fdiamond3"><p></p></div></p></div>
         <div class="progress" id="diamond4"><p><div class="ghost" id="fdiamond4"><p></p></div></p></div>
         <div class="progress" id="diamond5"><p><div class="ghost" id="fdiamond5"><p></p></div></p></div>
-
       </div>
+	  <img id="credit" src="Gallery/Juliette.png">
     </div>
 
 	<script>
-		$( "#button" ).click(function() {
-			$( ".ghost" ).animate({ left: 0, opacity: 1, }, 1000, function() {
+
+		
+		$("#button").click(function() {
+			$(".progress").addClass('glow');
+			$( ".ghost" ).animate({ opacity: 1, left: 0}, 1000, function() {
 				var x = document.getElementsByClassName('progress');
 				Array.from(x).forEach(function(x) {
 					x.style.overflow = "visible";
-				});
-			});	
-		});	
-		
-		$("#button").click(function() {
-			$( ".ghost" ).animate({ boxShadow: '0 0 1em rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255)' }, 1000, function() {
 			});
-			
+			});	
 		})
-		
+
 	</script>
   </body>
 </html>
