--- a/Gambino/index.html
+++ b/Gambino/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="loader-wrapper">
-      <p class="loader"><i class="fab fa-redhat"></i></p>
+      <p class="loader"><i class="fab fa-redhat" aria-hidden="true"></i></p>
     </div>
     <img id="backgroundHQ" src="Gallery/HQ_BW.png" draggable="false" />
     <div id="bgText">
@@ -42,14 +42,14 @@
         <div class="progress" id="diamond5"><p><div class="ghost" id="fdiamond5"><p></p></div></p></div>
       </div>
 
-      <div id="navbar">
-	<button id="closebtn"><i class="fas fa-times"></i></button>
-	<video id="video" loop autoplay muted>
-		<source src="Gallery/Whiskey-full.mp4" type="video/mp4">
-	</video>
-      </div>
+	  <div id="navbar">
+		<button id="closebtn"><i class="fas fa-times"></i></button>
+		<video id="video" loop autoplay muted>
+			<source src="Gallery/Whiskey-full.mp4" type="video/mp4">
+		</video>
+	  </div>
 
-      <img id="credit" src="Gallery/Juliette.png" draggable="false">
+	  <img id="credit" src="Gallery/Juliette.png" draggable="false">
     </div>
 
 	<script>
