--- a/Gambino/index.html
+++ b/Gambino/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="loader-wrapper">
-      <p class="loader"><i class="fab fa-redhat" aria-hidden="true"></i></p>
+      <p class="loader"><i class="fab fa-redhat"></i></p>
     </div>
     <img id="backgroundHQ" src="Gallery/HQ_BW.png" draggable="false" />
     <div id="bgText">
@@ -43,7 +43,7 @@
       </div>
 
 	  <div id="navbar">
-		<button id="closebtn"><i class="fas fa-times"></i></button>
+		<button id="closebtn">&times;</button>
 		<video id="video" loop autoplay muted>
 			<source src="Gallery/Whiskey-full.mp4" type="video/mp4">
 		</video>
