--- a/Gambino/index.html
+++ b/Gambino/index.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pirata+One&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" href="#" />
-    <script
-      src="http://kit.fontawesome.com/a5a841ddfe.js"
-      crossorigin="anonymous"
-    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="index.js"></script>
   </head>
   <body>
     <div class="loader-wrapper">
       <p class="loader"><i class="fab fa-redhat"></i></p>
     </div>
-    <img id="backgroundHQ" src="Gallery/HQ_BW.png" draggable="false" />
+    <img id="backgroundHQ" src="Gallery/HQ_BW.webp" draggable="false" />
     <div id="bgText">
       <p id="tgf">The Gambino Family</p>
       <p>La Cosa Nostra</p>
@@ -49,7 +39,7 @@
 		</video>
 	  </div>
 
-	  <img id="credit" src="Gallery/Juliette.png" draggable="false">
+	  <img id="credit" src="Gallery/Juliette.webp" draggable="false">
     </div>
 
 	<script>
@@ -67,5 +57,15 @@
 			$("#navbar").animate({ top: '100%' }, {duration: 1000, queue: false});
 		}) 
 	</script>
+	<script
+	src="http://kit.fontawesome.com/a5a841ddfe.js"
+	crossorigin="anonymous">
+	</script>
+  	<script src="index.js"></script>
+  	<link rel="preconnect" href="https://fonts.gstatic.com" />
+  	<link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pirata+One&display=swap"
+      rel="stylesheet"
+    />
   </body>
 </html>
