--- a/employment.html
+++ b/employment.html
@@ -26,7 +26,7 @@
     <div class="loader-wrapper">
       <img src="Gallery/GIF Logo CUT.gif" class="loader"></img>
     </div>
-    <img src="Gallery/background.png" class="bg" />
+    <img src="Gallery/background.webp" class="bg" />
     <section>
       <div class="container">
         <a href="https://lloyd-corporation.com" class="menu">Home</a>
