--- a/Jobs/estate.html
+++ b/Jobs/estate.html
@@ -27,7 +27,7 @@
     <div class="loader-wrapper">
       <img src="../Gallery/GIF Logo CUT.gif" class="loader"></img>
     </div>
-    <img id="header" src="../Gallery/house.png" class="hotring" />
+    <img id="header" src="../Gallery/house.webp" class="hotring" />
     <section>
       <a href="#bg" class="footer">
         <p class="text-scroll">Continue</p>
@@ -64,7 +64,7 @@
       <p>Apply Now</p>
     </a>
     <section>
-      <img id="bg" class="jester" src="../Gallery/house3.png" />
+      <img id="bg" class="jester" src="../Gallery/house3.webp" />
     </section>
   </body>
 </html>
