--- a/Jobs/sales.html
+++ b/Jobs/sales.html
@@ -26,7 +26,7 @@
     <div class="loader-wrapper">
       <img src="../Gallery/GIF Logo CUT.gif" class="loader"></img>
     </div>
-    <img id="header" src="../Gallery/hotring.png" class="hotring" />
+    <img id="header" src="../Gallery/hotring.webp" class="hotring" />
     <section>
       <a href="#bg" class="footer">
         <p class="text-scroll">Continue</p>
@@ -67,7 +67,7 @@
       <p>Apply Now</p>
     </a>
     <section>
-      <img id="bg" class="jester" src="../Gallery/jester.png" />
+      <img id="bg" class="jester" src="../Gallery/jester.webp" />
     </section>
   </body>
 </html>
