--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <img src="https://imgur.com/6LA5qkc.png" id="header" />
+    <img src="Gallery/LC-header.webp" id="header" />
 
     <div id="aboutus">
       <h1>History</h1>
@@ -131,9 +131,9 @@
     </div>
 
     <div class="founders">
-      <img id="marco" src="https://imgur.com/K49aFuz.png" />
-      <img id="bureaqer" src="https://imgur.com/KchIgLS.png" />
-      <img id="jasmine" src="https://imgur.com/sMqSlhW.png" />
+      <img id="marco" src="Gallery/Marco.webp" />
+      <img id="bureaqer" src="Gallery/Bur" />
+      <img id="jasmine" src="Gallery/Jas" />
       <div id="ma-name">
         <p class="retired-text">Marco Lloyd<br />Retired Chairman</p>
       </div>
