--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
     <div class="founders">
       <img id="marco" src="Gallery/Marco.webp" />
-      <img id="bureaqer" src="Gallery/Bur" />
-      <img id="jasmine" src="Gallery/Jas" />
+      <img id="bureaqer" src="Gallery/Bur.webp" />
+      <img id="jasmine" src="Gallery/Jas.webp" />
       <div id="ma-name">
         <p class="retired-text">Marco Lloyd<br />Retired Chairman</p>
       </div>
