--- a/index.html
+++ b/index.html
@@ -5,20 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./Study-3.css" />
     <link
       rel="shortcut icon"
       href="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
     />
-    <script
-      src="https://kit.fontawesome.com/a5a841ddfe.js"
-      crossorigin="anonymous"
-    ></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="study-3.js"></script>
     <title>Lloyd Corporation</title>
   </head>
@@ -147,5 +138,8 @@
     </div>
 
     <footer id="footer"><p>Lloyd Corporation - Copyright 2021 ©</p></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/a5a841ddfe.js" crossorigin="anonymous"></script>
   </body>
 </html>
