--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         src="https://forum.valrisegaming.com/uploads/monthly_2021_03/291999320_GIFLogoCUT.gif.d38e0b61b0048b596925eff4324635a0.gif"
         id="header-logo"
       /><img
-        src="https://forum.valrisegaming.com/uploads/monthly_2021_03/514018035_CopyofLCLogo.png.3143fc548cf66cc09b3b5bab796625ca.png"
+        src="Gallery/Logo.webp"
         id="header-logo2"
       />
     </div>
@@ -111,7 +111,7 @@
       <div id="hqtooltip">
         <img
           id="hq"
-          src="https://forum.valrisegaming.com/uploads/monthly_2021_03/Grand_Theft_Auto_San_Andreas_Screenshot_2021_03.15_-_13_34_21_64.thumb.png.b1edf781a0da4a984c2d72f866909034.png"
+          src="Gallery/HQ.webp"
         />
         <div id="hqtext">
           <p>
