--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
       <div id="founders-header"><p>Founders of Lloyd Corporation</p></div>
     </div>
 
+  
+    <script src="//myradiostream.com/embed/codat90"></script>
     <footer id="footer"><p>Lloyd Corporation - Copyright 2021 ©</p></footer>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/a5a841ddfe.js" crossorigin="anonymous"></script>
